--- a/src/main/html/package.json
+++ b/src/main/html/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "osport",
+  "name": "html",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Boice",
+  "author": "Boice <893430191@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
